Changes to be committed: 	modified:   final/report/report_final.pdf 	new file:   final/report/report_final.synctex.gz 	modified:   final/report/report_final.tex 	modified:   final/requirements.txt 	modified:   final/task3_object_reconstruction_view_synthesis/main.ipynb 	modified:   mid_term/report/report_mid.tex 	modified:   mid_term/task1_finetuning/data_loading_preprocessing.py 	modified:   mid_term/task1_finetuning/main_notebook.ipynb 	modified:   mid_term/task1_finetuning/model.py 	modified:   mid_term/task1_finetuning/training_fine_tuning.py

--- a/mid_term/task1_finetuning/main_notebook.ipynb
+++ b/mid_term/task1_finetuning/main_notebook.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "source": [
     "# 数据加载\n",
-    "下载数据（如果数据已存在则不重复下载），生成批量数据"
+    "下载数据（如果数据已存在则不重复下载）, 生成批量数据"
    ]
   },
   {
@@ -68,7 +68,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "数据集已存在，无需再次下载。\n"
+      "数据集已存在, 无需再次下载. \n"
      ]
     }
    ],
@@ -88,7 +88,7 @@
     "# 超参数调优\n",
     "对学习率和训练轮数进行调参（其它参数如动量和权重衰退是定值）\n",
     "\n",
-    "如果不想调参，可以直接进行数据可视化，那边提供了直接输入超参数的代码块\n"
+    "如果不想调参, 可以直接进行数据可视化, 那边提供了直接输入超参数的代码块\n"
    ]
   },
   {
@@ -148,7 +148,7 @@
    "source": [
     "对随机初始化模型进行超参数调优\n",
     "\n",
-    "也可以不调优，直接使用预训练模型的最优参数（一定意义上更公平）"
+    "也可以不调优, 直接使用预训练模型的最优参数（一定意义上更公平）"
    ]
   },
   {
@@ -187,7 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "如果不想重新调参，可以手动在下面输入最优参数"
+    "如果不想重新调参, 可以手动在下面输入最优参数"
    ]
   },
   {
@@ -196,7 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 此代码是用来跳过调参，直接运行的！\n",
+    "# 此代码是用来跳过调参, 直接运行的！\n",
     "best_params_pretrained = {'lr': 0.02, 'num_epochs': 20}\n",
     "best_params_random = {'lr': 0.02, 'num_epochs': 20}"
    ]
@@ -205,7 +205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "重新训练预训练模型，用Tensorboard可视化"
+    "重新训练预训练模型, 用Tensorboard可视化"
    ]
   },
   {
@@ -240,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # 可以在这里直接导入模型的状态字典，而不是重新训练，可以更方便地进行进一步操作\n",
+    "# # 可以在这里直接导入模型的状态字典, 而不是重新训练, 可以更方便地进行进一步操作\n",
     "# # 初始化模型\n",
     "# trained_model_pretrained, _ = initialize_model(\"resnet\", 200, use_pretrained=True)\n",
     "# trained_model_pretrained = trained_model_pretrained.to(device)\n",
@@ -254,7 +254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "重新训练随机初始化模型，用Tensorboard可视化"
+    "重新训练随机初始化模型, 用Tensorboard可视化"
    ]
   },
   {
@@ -286,7 +286,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # 可以在这里直接导入模型的状态字典，而不是重新训练，可以更方便地进行进一步操作\n",
+    "# # 可以在这里直接导入模型的状态字典, 而不是重新训练, 可以更方便地进行进一步操作\n",
     "# # 初始化模型\n",
     "# trained_model_random, _ = initialize_model(\"resnet\", 200, use_pretrained=False)\n",
     "# trained_model_random = trained_model_random.to(device)\n",
